[gd_scene load_steps=8 format=2]

[ext_resource path="res://characters/placeholders/icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/Text.gd" type="Script" id=2]
[ext_resource path="res://scripts/Enemy_HealthBar.gd" type="Script" id=3]


[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.796078, 0.235294, 0.235294, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.741176, 0.611765, 0.678431, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.945098, 0.827451, 0.0666667, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.741176, 0.611765, 0.678431, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.741176, 0.611765, 0.678431, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.741176, 0.611765, 0.678431, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HealthBar" type="ProgressBar"]
margin_right = 128.0
margin_bottom = 16.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 80.0
percent_visible = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = -4.76837e-07
margin_top = -8.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthText" type="Label" parent="."]
margin_left = 27.9885
margin_top = 3.0676
margin_right = 171.989
margin_bottom = 27.0676
rect_scale = Vector2( 0.8, 0.8 )
text = "420/69"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnderBar" type="ProgressBar" parent="."]
show_behind_parent = true
margin_left = -4.76837e-07
margin_right = 128.0
margin_bottom = 16.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]

[node name="FlashTween" type="Tween" parent="."]
